--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,22 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1>Hello!</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    Here is what we do
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+
 </div>
 
 <div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
+  <h4>Dynamic Web Sites</h4>
   <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+    Using HTML5 we can create gorgeous web sites to be the face of your company or idea!
   </p>
 
-  <h4>Angular</h4>
+  <h4>Web Applications</h4>
   <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
+    We specialize in creating applications that you can incorporate into your website for special functionality and operations!
   </p>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+  <h4>Mobile Applications</h4>
+  <p>Want a companion smart phone app for your website? We also create Android and iOS apps!</p>
 </div>
