--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,16 @@
-<p>This is the about view.</p>
+<div class="jumbotron">
+  <h2>Our Developers</h2>
+</div>
+
+<div class="row marketing">
+  <h4>Chad Eddington</h4>
+  <p>
+    I am a Software Engineer specialized in web and mobile Applications
+  </p>
+
+  <h4>Shauna Salter</h4>
+  <p>
+    I am a Web Developer familiar with multiple languages
+  </p>
+
+</div>
